--- a/JS/AJAX/Exercice6/index.html
+++ b/JS/AJAX/Exercice6/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="scrip.js"></script>
+    <script src="script.js"></script>
 </head>
-<body onload="cat_ajax();">
+<body onload="cat_ajax()">
 <form >
-    <select id="categorie" onchange="prod_ajax();">
+    <select id="categorie">
 
     </select>
-    <select>
+    <select id="produit">
 
     </select>
     <button type="submit">Valider</button>
 </form>
 
 </body>
+
 </html>
