--- a/VueJS/TP1/component.html
+++ b/VueJS/TP1/component.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html class="accueil" lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>component.html</title>
 </head>
 <body>
-$END$
+
+<div id="components-demo" ref="toto">
+    <h1>Component</h1>
+    <button-counter></button-counter>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="./app.js"></script>
 </body>
 </html>
