--- a/VueJS/TP1/vroum.html
+++ b/VueJS/TP1/vroum.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html class="accueil" lang="fr">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>hello.html</title>
+    <!--<link rel="stylesheet" href="css/mon_site.css">-->
 </head>
+
 <body>
-$END$
+<h1>Hello ! </h1>
+<div id="app">
+    <div class="TEST" :class="couleur" v-if="couleur === 'BOP'">
+        {{couleur_bleu}}
+
+    </div>
+
+    <div class="vroum" :class="couleur" v-if="couleur == 'VROUM'">
+        {{couleur_rouge}}
+
+    </div>
+
+    {{ message }}
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script type="text/javascript">
+
+    var app = new Vue({
+        el: '#app',
+        data: {
+            message: 'Hello Vue!',
+            couleur_bleu: 'bopbop bleu',
+            couleur_rouge: 'vroumvroum rouge',
+            couleur: 'VROUM'
+        }
+    });
+</script>
 </body>
+
 </html>
