--- a/VueJS/TP1/couleur.html
+++ b/VueJS/TP1/couleur.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Title</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-$END$
+
+    <div id="app2">
+        <div v-if="nb%2 === 0" :style="'background-color:'+pair">
+            {{message}}
+        </div>
+        <div  v-else :style="'background-color:'+impair">
+            {{"im"+message}}
+        </div>
+        <button v-on:click="nb++">{{nb}}</button>
+    </div>
+    <script>
+       var app = new Vue({
+           el: '#app2',
+           data: {
+               nb: 0,
+               pair: '#ff0000',
+               impair: '#00ff00',
+               message: 'pair'
+           }
+       })
+    </script>
 </body>
 </html>
