essais card project

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -351,19 +351,6 @@
                     <input type="radio" name="slides" id="slide-6">
                     <ul class="carousel__slides">
                         <li class="carousel__slide flip-card">
-                            <!--<div class="flip-card">-->
-                                <div class="flip-card-inner">
-                                    <div class="flip-card-front">
-                                        <h3>Projet Lego</h3>
-                                        <img src="images/projetSWM.png" alt="Avatar" style="width:300px;height:300px;">
-                                    </div>
-                                    <div class="flip-card-back">
-                                        <h3>John Doe</h3>
-                                        <p>Architect & Engineer</p>
-                                        <p>We love that guy</p>
-                                    </div>
-                                </div>
-                            <!--</div>-->
                             <figure>
                                 <div>
                                     <img src="https://picsum.photos/id/1041/800/450" alt="">
@@ -375,8 +362,7 @@
                             </figure>
                         </li>
                         <li class="carousel__slide">
-
-                            <!--<figure>
+                            <figure>
                                 <div>
                                     <img src="https://picsum.photos/id/1043/800/450" alt="">
                                 </div>
@@ -384,7 +370,7 @@
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     <span class="credit">Photo: Christian Joudrey</span>
                                 </figcaption>
-                            </figure>-->
+                            </figure>
                         </li>
                         <li class="carousel__slide">
                             <figure>
