--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -306,29 +306,16 @@
 
     <div class="realisations">
         <h2>Réalisations</h2>
-        <div class="flip-card">
-            <div class="flip-card-inner">
-                <div class="flip-card-front">
-                    <h3>Projet Lego</h3>
-                    <img src="images/projetSWM.png" alt="Avatar" style="width:300px;height:300px;">
-                </div>
-                <div class="flip-card-back">
-                    <h3>John Doe</h3>
-                    <p>Architect & Engineer</p>
-                    <p>We love that guy</p>
-                </div>
-            </div>
-        </div>
         <div class="center">
             <div class="property-card">
                 <a href="#">
                     <div class="property-image">
                         <div class="property-image-title">
-                            <!-- Optional <h5>Card Title</h5> If you want it, turn on the CSS also. -->
+                            <!-- Optional--> <h5>Card Title</h5><!--If you want it, turn on the CSS also. -->
                         </div>
                     </div></a>
                 <div class="property-description">
-                    <h5> Card Title </h5>
+                    <h5> Projet SWM </h5>
                     <p>Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More Bingo. Lorem Ipum doth be hard.</p>
                 </div>
                 <a href="#">
