essais card project

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -316,6 +316,13 @@
                     </div></a>
                 <div class="property-description">
                     <h5> Projet SWM </h5>
+                    <p>Langages: </p>
+                    <ul>
+                        <li>HTML/CSS</li>
+                        <li>JavaScript</li>
+                        <li>PHP</li>
+                        <li>SQL</li>
+                    </ul>
                     <p>Lorem Ipsum Dipsum hortata. Mixcall Horcho. Mixwell Chingo. More Bingo. Lorem Ipum doth be hard.</p>
                 </div>
                 <a href="#">
