--- a/Integration/MIW-Weather/map.html
+++ b/Integration/MIW-Weather/map.html
@@ -20,19 +20,9 @@
             </div>
             <div class="search">
                 <input type="text" placeholder="Ville, adresse, ....">
-                <button><svg xmlns="http://www.w3.org/2000/svg" width="35.204" height="36.987" viewBox="0 0 35.204 36.987">
-                    <g id="Search" transform="translate(0 0)">
-                        <path id="Tracé_4" data-name="Tracé 4" d="M132.3,127.8a1.428,1.428,0,0,1-1.055-.456L121.32,116.65a1.391,1.391,0,0,1-.371-1.027,1.623,1.623,0,0,1,.456-1A12,12,0,0,0,113.65,93.7a12.007,12.007,0,1,0-.086,24.009h.028a1.424,1.424,0,0,1,1.426,1.4,1.449,1.449,0,0,1-1.4,1.454A14.879,14.879,0,1,1,124.8,115.2c-.143.171-.285.342-.428.485l8.982,9.7a1.414,1.414,0,0,1-.086,2.025A1.292,1.292,0,0,1,132.3,127.8Z" transform="translate(-98.536 -90.812)" fill="#ff8f15"/>
-                    </g>
-                </svg>
-                </button>
+                <button><img src="icons/Search.svg"></button>
             </div>
-            <button class="localisation"><svg xmlns="http://www.w3.org/2000/svg" width="26.808" height="26.809" viewBox="0 0 26.808 26.809">
-                <g id="noun_Navigation_3179702" transform="translate(-46.75 -56.749)">
-                    <path id="Tracé_1184" data-name="Tracé 1184" d="M33.363,6.944A.662.662,0,0,0,32.6,6.82L7.117,19.56a.664.664,0,0,0-.1,1.124l3.824,2.868L6.807,32.624a.663.663,0,0,0,.876.876l9.072-4.032,2.868,3.824a.664.664,0,0,0,1.124-.1L33.488,7.71A.663.663,0,0,0,33.363,6.944ZM20.041,31.637,17.5,28.249a.663.663,0,0,0-.8-.208L8.721,31.587l3.546-7.979a.663.663,0,0,0-.208-.8L8.671,20.267,31.411,8.9Z" transform="translate(40 50)" fill="#ff8f15"/>
-                </g>
-            </svg>
-            </button>
+            <button class="localisation"><img src="icons/position.svg"></button>
         </div>
         <div class="nav_droite">
             <input type="text" disabled>
@@ -45,11 +35,7 @@
     <div class="infos">
         <div class="nav_infos">
             <div class="time">
-                <svg id="noun_History_1935411" xmlns="http://www.w3.org/2000/svg" width="30" height="27.055" viewBox="0 0 30 27.055">
-                    <path id="Tracé_26" data-name="Tracé 26" d="M107.719,148.648a13.527,13.527,0,1,1,.728-27.035,1.14,1.14,0,1,1-.137,2.276,11.257,11.257,0,0,0-8.147,19.593,11.253,11.253,0,0,0,18.8-8.625,1.143,1.143,0,0,1,2.162-.546l2.936,5.78a1.135,1.135,0,1,1-2.025,1.024l-1.229-2.435a13.484,13.484,0,0,1-4.6,7.009,13.708,13.708,0,0,1-8.488,2.958Z" transform="translate(-94.178 -121.593)" fill="#fff"/>
-                    <path id="Tracé_27" data-name="Tracé 27" d="M464,271.646a1.141,1.141,0,0,1-1.152-1.152v-7.88a1.152,1.152,0,0,1,2.3,0v7.88A1.155,1.155,0,0,1,464,271.646Z" transform="translate(-450.571 -256.834)" fill="#fff"/>
-                    <path id="Tracé_28" data-name="Tracé 28" d="M471.88,497.238H464a1.152,1.152,0,1,1,0-2.3h7.88a1.141,1.141,0,0,1,1.152,1.152A1.155,1.155,0,0,1,471.88,497.238Z" transform="translate(-450.636 -482.503)" fill="#fff"/>
-                </svg>
+                <img src="icons/time.svg">
                 <p>10h50: 21/12/2020</p>
             </div>
             <div class="trait">
@@ -82,7 +68,7 @@
             <h2>Rue du 1er mars 2028</h2>
         </div>
         <div class="measures">
-            <img src="icons/DripDripDrip.svg">
+            <!--<img src="icons/DripDripDrip.svg">-->
             <div class="data">
                 <div class="value">
                     <img src="icons/Humidity.svg">
